Fixed right spacing of title line

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
     font-size: 60px;
     font-weight: 900;
     padding-left: 2rem;
+    padding-right: 2rem;
 
 }
 
